--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -18,6 +18,7 @@
         <link rel="stylesheet" type="text/css" href="bower_components/ngGallery/src/css/ngGallery.css">
         <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
               rel="stylesheet">
+        <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-T8Gy5hrqNKT+hzMclPo118YTQO6cYprQmhrYwIiQ/3axmI1hQomh7Ud2hPOy8SP1" crossorigin="anonymous">
 
         <!-- endbower -->
         <!-- endbuild -->
@@ -31,7 +32,7 @@
     <![endif]-->
     <div ng-show="{{ENV === 'dev'}}" ng-cloak=""></div>
     <div ui-view="navbar" ng-cloak=""></div>
-    <div ui-view="content"></div>
+    <div ui-view="content" style="background-color: #fafafa;"></div>
         <!-- Google Analytics: uncomment and change UA-XXXXX-X to be your site's ID.
         <script>
             (function(b,o,i,l,e,r){b.GoogleAnalyticsObject=l;b[l]||(b[l]=
