--- a/src/main/webapp/scripts/app/entities/favorite/favorites.html
+++ b/src/main/webapp/scripts/app/entities/favorite/favorites.html
@@ -1,92 +1,3 @@
-<!--<div>
-    <h2 translate="project1App.favorite.home.title">Favorites</h2>
-    <jh-alert></jh-alert>
-    <div class="container-fluid">
-        <div class="row">
-            <div class="col-xs-4 no-padding-left">
-                <button class="btn btn-primary" ui-sref="favorite.new" >
-                    <span class="glyphicon glyphicon-plus"></span>
-                    <span
-class="hidden-xs"                        translate="project1App.favorite.home.createLabel">Create new Favorite
-                    </span>
-                </button>
-            </div>
-            <div class="col-xs-8 no-padding-right">
-                <form name="searchForm" class="form-inline">
-                    <div class="input-group pull-right" >
-                        <input type="text" class="form-control" ng-model="searchQuery" id="searchQuery" placeholder="{{ 'project1App.favorite.home.search' | translate }}">
-                        <span  class="input-group-btn width-min" >
-                            <button class="btn btn-info" ng-click="search()">
-                                <span class="glyphicon glyphicon-search"></span>
-                            </button>
-                        </span>
-                    </div>
-                </form>
-            </div>
-        </div>
-    </div>
-    <br/>
-    <div class="table-responsive">
-        <table class="jh-table table table-striped">
-            <thead>
-                <tr jh-sort="predicate" ascending="reverse" callback="loadAll()">
-                    <th jh-sort-by="id"><span translate="global.field.id">ID</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="liked"><span translate="project1App.favorite.liked">Liked</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="space.name"><span translate="project1App.favorite.space">space</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th jh-sort-by="user.email"><span translate="project1App.favorite.user">user</span> <span class="glyphicon glyphicon-sort"></span></th>
-                    <th></th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr ng-repeat="favorite in favorites track by favorite.id">
-                    <td><a ui-sref="favorite.detail({id:favorite.id})">{{favorite.id}}</a></td>
-                    <td>{{favorite.liked}}</td>
-                    <td>
-                        <a ui-sref="space.detail({id:favorite.space.id})">{{favorite.space.name}}</a>
-                    </td>
-                    <td>
-                        {{favorite.user.email}}
-                    </td>
-                    <td class="text-right">
-                        <div class="btn-group flex-btn-group-container">
-                            <button type="submit"
-                                    ui-sref="favorite.detail({id:favorite.id})"
-                                    class="btn btn-info btn-sm">
-                                <span class="glyphicon glyphicon-eye-open"></span>
-                                <span class="hidden-xs hidden-sm" translate="entity.action.view"></span>
-                            </button>
-                            <button type="submit"
-                                    ui-sref="favorite.edit({id:favorite.id})"
-                                    class="btn btn-primary btn-sm">
-                                <span class="glyphicon glyphicon-pencil"></span>
-                                <span class="hidden-xs hidden-sm" translate="entity.action.edit"></span>
-                            </button>
-                            <button type="submit"
-                                    ui-sref="favorite.delete({id:favorite.id})"
-                                    class="btn btn-danger btn-sm">
-                                <span class="glyphicon glyphicon-remove-circle"></span>
-                                <span class="hidden-xs hidden-sm" translate="entity.action.delete"></span>
-                            </button>
-                        </div>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <div class="text-center">
-        <uib-pagination class="pagination-sm" total-items="totalItems" ng-model="page" ng-change="loadAll()"></uib-pagination>
-    </div>
-</div>-->
-
-<style>
-    .material{
-        box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.14), 0 1px 5px 0 rgba(0, 0, 0, 0.12), 0 3px 1px -2px rgba(0, 0, 0, 0.2);
-        border:none;
-        overflow: hidden;
-        padding: 0;
-    }
-</style>
-
 <div class="container">
     <div class="row">
         <h4>Tus espacios favoritos, {{account.firstName}}
@@ -94,24 +5,28 @@ class="hidden-xs"                        translate="project1App.favorite.home.cr
         <h4>
         Favoritos: {{filtered.length}}</h4>
         <div class="col-xs-10 col-xs-offset-1 col-sm-6 col-sm-offset-0 col-md-4"  ng-repeat="favorite in  filtered = (favorites | filter:filterExpr)">
-            <div class="thumbnail material">
-                <a ui-sref="space.detail({id:favorite.space.id})">
-                    <!--<img data-ng-src="{{'data:' + space.imgContentType + ';base64,' + space.img}}" style="height: 200px; min-width: 100%;" ng-if="space.img"/>-->
-                    <img style="min-width: 100%;" src="http://placehold.it/350x150">
-                </a>
-<!--
-                <a ng-click="like(spaceDTO.space.id)" aria-label="More">
-                    <paper-fab ng-class="{true: 'fav2', false: 'fav'}[spaceDTO.liked == false]" icon="favorite-border" style="float: right; top: -30px; right: 18px; background-color: white;"></paper-fab>
-                </a>
--->
-                <a ui-sref="space.detail({id:favorite.space.id})" class="decoration" style="text-decoration: none">
-                    <div class="caption">
-                        <h3>{{favorite.space.name}}</h3>
-                        <p style="color: rgba(0,0,0,0.54)">{{favorite.space.description}}</p>
-                        <p style="color: #43DBB9; text-align: right; font-size: 24px;font-weight: 600;">{{favorite.space.price}} €</p>
-                    </div>
-                </a>
-            </div>
+            <md-card>
+                <md-card-header>
+                    <md-card-avatar>
+                        <img ng-src="profile/{{favorite.space.user.login}}.jpg"/>
+                    </md-card-avatar>
+                    <md-card-header-text>
+                        <span class="md-title">{{favorite.space.user.login}}</span>
+                        <span class="md-subhead">{{favorite.space.user.firstName}}</span>
+                    </md-card-header-text>
+                </md-card-header>
+                <img style="min-width: 100%; height: 150px; width: 100%; object-fit: cover;" ng-src="uploads/{{favorite.space.name}}{{favorite.space.id}}0.jpg" class="md-card-image" alt="Washed Out">
+                <md-card-title>
+                    <md-card-title-text>
+                        <span class="md-headline">{{favorite.space.name}}</span>
+                    </md-card-title-text>
+                </md-card-title>
+                <md-card-content>
+                    <p>
+                        {{favorite.space.description}}
+                    </p>
+                </md-card-content>
+            </md-card>
         </div>
     </div>
 </div>
