--- a/src/main/webapp/scripts/app/entities/space/spaces.html
+++ b/src/main/webapp/scripts/app/entities/space/spaces.html
@@ -1,7 +1,7 @@
 
 
 <div class="container">
-    <div class="row">
+    <div class="row" style="margin-bottom: 25px;">
             <div class="col-md-6 col-md-push-1">
                 <div class="material">
                     <div>
@@ -20,45 +20,31 @@
                             </div>
                         </div>
                         <br/>
-                        <div class="table-responsive">
-                            <table class="jh-table table table-striped">
-                                <thead>
-                                <tr jh-sort="predicate" ascending="reverse" callback="loadAll()">
-                                    <th jh-sort-by="id"><span translate="global.field.id">ID</span> <span class="glyphicon glyphicon-sort"></span></th>
-                                    <th jh-sort-by="name"><span translate="project1App.space.name">Name</span> <span class="glyphicon glyphicon-sort"></span></th>
-                                    <th jh-sort-by="description"><span translate="project1App.space.description">Description</span> <span class="glyphicon glyphicon-sort"></span></th>
-                                    <th jh-sort-by="price"><span translate="project1App.space.price">Price</span> <span class="glyphicon glyphicon-sort"></span></th>
-                                    <th jh-sort-by="personMax"><span translate="project1App.space.personMax">PersonMax</span> <span class="glyphicon glyphicon-sort"></span></th>
-                                    <th jh-sort-by="streetAddress"><span translate="project1App.space.streetAddress">StreetAddress</span> <span class="glyphicon glyphicon-sort"></span></th>
-                                    <th></th>
-                                </tr>
-                                </thead>
-                                <tbody>
-                                <tr ng-repeat="space in spaces track by space.id">
-                                    <td><a ui-sref="space.detail({id:space.id})">{{space.id}}</a></td>
-                                    <td>{{space.name}}</td>
-                                    <td>{{space.description | limitTo: 35}}{{space.description.length > 35 ? '...' : ''}}</td>
-                                    <td>{{space.price}}</td>
-                                    <td>{{space.personMax}}</td>
-                                    <td>{{space.streetAddress}}</td>
-                                    <td class="text-right">
-                                        <div class="btn-group flex-btn-group-container">
-                                            <md-button class="edit" type="submit"
-                                                          ui-sref="space.edit({id:space.id})">
-                                                <i class="material-icons">edit</i>
-                                                <span class="hidden-xs hidden-sm" translate="entity.action.edit"></span>
-                                            </md-button>
-                                            <md-button class="delete" type="submit"
-                                                          ui-sref="space.delete({id:space.id})">
-                                                <i class="material-icons">delete</i>
-                                                <span class="hidden-xs hidden-sm" translate="entity.action.delete"></span>
-                                            </md-button>
-                                        </div>
-                                    </td>
-                                </tr>
-                                </tbody>
-                            </table>
-                        </div>
+                                <div flex-xs flex-gt-xs="100" layout="column" ng-repeat="space in spaces">
+                                        <md-card>
+                                            <md-card-title>
+                                                <md-card-title-text>
+                                                    <span class="md-headline">{{space.name}}</span>
+                                                    <span class="md-subhead">{{space.price}}</span>
+                                                </md-card-title-text>
+                                                <md-card-title-media>
+                                                    <div class="md-media-sm card-media"><img ng-src="uploads/{{space.name}}{{space.id}}0.jpg"></div>
+                                                </md-card-title-media>
+                                            </md-card-title>
+                                            <md-card-actions layout="row" layout-align="end center">
+                                                    <md-button class="edit" type="submit"
+                                                               ui-sref="space.edit({id:space.id})">
+                                                        <i class="material-icons">edit</i>
+                                                        <span class="hidden-xs hidden-sm" translate="entity.action.edit"></span>
+                                                    </md-button>
+                                                    <md-button class="delete" type="submit"
+                                                               ui-sref="space.delete({id:space.id})">
+                                                        <i class="material-icons">delete</i>
+                                                        <span class="hidden-xs hidden-sm" translate="entity.action.delete"></span>
+                                                    </md-button>
+                                            </md-card-actions>
+                                        </md-card>
+                                </div>
                         <div class="text-center">
                             <uib-pagination class="pagination-sm" total-items="totalItems" ng-model="page" ng-change="loadAll()"></uib-pagination>
                         </div>
@@ -67,7 +53,7 @@
             </div>
         <div class="col-md-4 col-md-push-1">
             <div class="material">
-                    <img ng-src="profile/{{account.login}}.jpg">
+                    <img class="profile-img-space" ng-src="profile/{{account.login}}.jpg">
                     <div>
                         <h3 style="color: rgba(0,0,0,0.87);">{{account.firstName}}
                             {{account.lastName}}</h3>
@@ -84,7 +70,7 @@
                     </div>
             </div>
         </div>
-        <div class="col-md-4 col-md-push-7">
+        <div class="col-md-4 col-md-push-1">
             <div class="material" style="padding: 0px;">
                 <div ng-cloak>
                     <md-content>
